# contract-review-env

./: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __main__.py  app.py  environment.py
tests/: test_env.py
