[project]
name = "contract-review-env"
version = "1.0.0"
description = "OpenEnv environment for AI-driven legal contract review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "openai>=1.30.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]
[project.scripts]
server = "server.__main__:main"
[dependency-groups]
dev = ["pytest>=8.0.0"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["server"]
